--- a/microservicioMeteo/package.json
+++ b/microservicioMeteo/package.json
@@ -15,11 +15,14 @@
   "author": "Beñat Barrueta Bilbao",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "config": "^3.3.12",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "microservicio_meteo": "file:",
     "mongo": "^0.1.0",
     "mongoose": "^8.7.2",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "openweather": "^1.0.4"
   }
 }
