--- a/microservicioMeteo/package.json
+++ b/microservicioMeteo/package.json
@@ -4,7 +4,8 @@
   "description": "Microservice that controls the meteo",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node main.js"
   },
   "keywords": [
     "node",
