--- a/microservicioMeteo/package.json
+++ b/microservicioMeteo/package.json
@@ -24,6 +24,8 @@
     "mongo": "^0.1.0",
     "mongoose": "^8.7.2",
     "nodemon": "^3.1.7",
-    "openweather": "^1.0.4"
+    "openweather": "^1.0.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
