--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "stream-browserify": "^3.0.0",
     "url": "^0.11.3",
     "util": "^0.12.5",
+    "web": "file:",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
